--- a/styles/styles-2.css
+++ b/styles/styles-2.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 
 }
 /* ------------
@@ -151,4 +152,15 @@ main{
     display: flex;
     align-items: center;
     margin-left: 20px;
+}
+footer{
+    height: 200px;
+    margin-top: 100px;
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 50px;
+}
+hr{
+    width: 800px;
 }
